--- a/app/admin/view/share/login.html
+++ b/app/admin/view/share/login.html
@@ -1,20 +1,6 @@
-﻿<!DOCTYPE html>
-<html xmlns="http://www.w3.org/1999/xhtml">
-<head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Free Bootstrap Admin Template : Binary Admin</title>
-	<!-- BOOTSTRAP STYLES-->
-    <link href="assets/css/bootstrap.css" rel="stylesheet" />
-     <!-- FONTAWESOME STYLES-->
-    <link href="assets/css/font-awesome.css" rel="stylesheet" />
-        <!-- CUSTOM STYLES-->
-    <link href="assets/css/custom.css" rel="stylesheet" />
-     <!-- GOOGLE FONTS-->
-   <link href='http://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css' />
-
-</head>
+﻿{block name="include"}{include file="public:head" /}{/block}
 <body>
+
     <div class="container">
         <div class="row text-center ">
             <div class="col-md-12">
@@ -52,29 +38,14 @@
                                             </span>
                                         </div>
                                      
-                                     <a href="index.html" class="btn btn-primary ">Login Now</a>
+                                     <a href="../../../../btts_47_binary-Admin-v1.1/index.html" class="btn btn-primary ">Login Now</a>
                                     <hr />
-                                    Not register ? <a href="registeration.html" >click here </a> 
+                                    Not register ? <a href="../../../../btts_47_binary-Admin-v1.1/registeration.html" >click here </a>
                                     </form>
                             </div>
                            
                         </div>
                     </div>
-                
-                
         </div>
     </div>
-
-
-     <!-- SCRIPTS -AT THE BOTOM TO REDUCE THE LOAD TIME-->
-    <!-- JQUERY SCRIPTS -->
-    <script src="assets/js/jquery-1.10.2.js"></script>
-      <!-- BOOTSTRAP SCRIPTS -->
-    <script src="assets/js/bootstrap.min.js"></script>
-    <!-- METISMENU SCRIPTS -->
-    <script src="assets/js/jquery.metisMenu.js"></script>
-      <!-- CUSTOM SCRIPTS -->
-    <script src="assets/js/custom.js"></script>
-   
 </body>
-</html>
