--- a/app/admin/view/public/head.html
+++ b/app/admin/view/public/head.html
@@ -23,7 +23,7 @@
     <script src="{$Think.__ADMIN_STYLE__}/assets/js/bootstrap.min.js"></script>
     <!-- METISMENU SCRIPTS -->
     <script src="{$Think.__ADMIN_STYLE__}/assets/js/jquery.metisMenu.js"></script>
-    <script src="{$Think.__ADMIN_STYLE__}/assets/js/validform.js"></script>
+    <script src="{$Think.__ADMIN_STYLE__}/assets/js/Validform_v5.3.2_min.js"></script>
     <!-- CUSTOM SCRIPTS -->
     <script src="{$Think.__ADMIN_STYLE__}/assets/js/custom.js"></script>
 </head>
