--- a/app/admin/view/user/info.html
+++ b/app/admin/view/user/info.html
@@ -1,6 +1,4 @@
 ﻿{block name="include"}{include file="public:head" /}{/block}
-
-
 <body>
     <div id="wrapper">
         {block name="include"}{include file="public:nav" /}{/block}
@@ -15,29 +13,24 @@
                 <div class="row">
                     <form role="form" class="demoform">
                         <div class="form-group">
-                            <label>用户名</label>
-                            <input class="form-control" type="text" placeholder="用户名">
-                            <p class="help-block">Help text here.</p>
+                            <label>邮箱</label>
+                            <input class="form-control" type="text" placeholder="邮箱" datatype="e" nullmsg="请填写邮箱账号！"  errormsg="邮箱账号格式错误！" >
+                            <p class="help-block"></p>
                         </div>
                         <div class="form-group">
                             <label>密码</label>
-                            <input class="inputxt form-control" name="userpassword" type="password" placeholder="密码"  datatype="*6-15"  nullmsg="请设置密码！" errormsg="密码范围在6~15位之间！">
-                            <div class="Validform_checktip ">密码范围在6~15位之间</div>
+                            <input class="inputxt form-control" name="password" type="password" placeholder="密码"  datatype="password"  nullmsg="请设置密码！" errormsg="密码范围在8~16位数字加字母！">
+                            <div class="Validform_checktip "></div>
                         </div>
                         <div class="form-group">
                             <label>昵称</label>
-                            <input class="form-control" type="text" placeholder="昵称">
-                            <p class="help-block">Help text here.</p>
+                            <input class="form-control" type="text" placeholder="昵称 " datatype="z2-4"  nullmsg="请填写昵称" errormsg="2到4个中文字符">
+                            <p class="Validform_checktip"></p>
                         </div>
                         <div class="form-group">
                             <label>手机号</label>
-                            <input class="form-control" type="text" placeholder="手机号">
-                            <p class="help-block">Help text here.</p>
-                        </div>
-                        <div class="form-group">
-                            <label>邮箱</label>
-                            <input class="form-control" type="text" placeholder="邮箱">
-                            <p class="help-block">Help text here.</p>
+                            <input class="form-control inputxt" type="text" placeholder="手机号" datatype="m"  nullmsg="请填写手机号！"  errormsg="手机号错误！">
+                            <p class="Validform_checktip"></p>
                         </div>
                         <div class="form-group">
                             <label>权限组</label>
@@ -45,17 +38,8 @@
                                 <option>请选择</option>
                             </select>
                         </div>
+                        <button type="submit" class="btn btn-primary">提交</button>
                     </form>
-                </div>
-                <div class="row">
-                    <div class="col-md-12">
-                        <h3>More Customization</h3>
-                         <p>
-                        For more customization for this template or its components please visit official bootstrap website i.e getbootstrap.com or <a href="#/components/" target="_blank">click here</a> . We hope you will enjoy our template. This template is easy to use, light weight and made with love by binarycart.com
-                        </p>
-                    </div>
-                </div>
-                <!-- /. ROW  -->
                 </div>
              <!-- /. PAGE INNER  -->
             </div>
@@ -66,11 +50,62 @@
     <!-- JQUERY SCRIPTS -->
 </body>
 <script>
-
-
-        $(".demoform").Validform({
-            tiptype: 4,
-        })
-
+    $(".demoform").Validform({
+        tiptype: 4,
+        datatype: {
+            "z2-4": /^[\u4E00-\u9FA5\uf900-\ufa2d]{2,4}$/,
+            "password": /^(?![0-9]+$)(?![a-zA-Z]+$)[0-9A-Za-z]{8,16}$/,
+            /*邮箱验证*/
+            "e": function (gets) {
+                var url = "{:Url('admin/User/vali_data')}";
+                var email = /^[a-zA-Z0-9_-]+@[a-zA-Z0-9_-]+(\.[a-zA-Z0-9_-]+)+$/;
+                var data = new Array();
+                data [0] = gets;
+                data [1] = 'username';
+                if (email.test(gets)) {
+                    var status = ajax_validform(url, data);
+                    if (status.info != true) {
+                        return status.tips;
+                    } else {
+                        return true;
+                    }
+                }
+                return false;
+            },
+            /*手机验证*/
+            "m": function (gets) {
+                var url = "{:Url('admin/User/vali_data')}";
+                var mobile = /^1[34578]\d{9}$/;
+                var data = new Array();
+                data [0] = gets;
+                data [1] = 'mobile';
+                if (mobile.test(gets)) {
+                    var status = ajax_validform(url, data);
+                    if (status.info != true) {
+                        return status.tips;
+                    } else {
+                        return true;
+                    }
+                }
+                return false;
+            },
+            callback: function (data) {
+            }
+        }
+    });
+    function ajax_validform(url,data){
+        var field = data[1];  var value = data[0];
+        var date;
+        $.ajax({
+            type: "POST",
+            url: url,
+            async:false,
+            data:"field="+field+"&value="+value,
+            success: function(msg){
+                date=eval('('+msg+')');
+            }
+        });
+        return date;
+    }
 </script>
 </html>
