--- a/app/admin/view/index/index.html
+++ b/app/admin/view/index/index.html
@@ -124,7 +124,7 @@
 				</ul>
 				<div class="layui-tab-content clildFrame">
 					<div class="layui-tab-item layui-show">
-						<iframe src="page/main.html"></iframe>
+						<iframe src="{:Url('admin/index/info')}"></iframe>
 					</div>
 				</div>
 			</div>
@@ -134,13 +134,16 @@
 			<p>copyright @2017 请叫我马哥　　<a onclick="donation()" class="layui-btn layui-btn-danger l·ayui-btn-small">捐赠作者</a></p>
 		</div>
 	</div>
-	
+
+	<script>
+		var leftnav_url = "{:Url('admin/Nav/leftnav')}"
+	</script>
 	<!-- 移动导航 -->
 	<div class="site-tree-mobile layui-hide"><i class="layui-icon">&#xe602;</i></div>
 	<div class="site-mobile-shade"></div>
 
 	<script type="text/javascript" src="{$Think.__ADMIN_LAYER__}/layui/layui.js"></script>
-	<script type="text/javascript" src="{$Think.__ADMIN_LAYER__}/js/leftNav.js"></script>
 	<script type="text/javascript" src="{$Think.__ADMIN_LAYER__}/js/index.js"></script>
+	<script type="text/javascript" src="{$Think.__ADMIN_LAYER__}/js/leftNav.js"></script>
 </body>
 </html>
