--- a/app/admin/view/nav/info.html
+++ b/app/admin/view/nav/info.html
@@ -1,43 +1,35 @@
-
-<div style="margin: 15px;">
-	<form class="layui-form">
+<!DOCTYPE html>
+<html>
+<head>
+	<meta charset="utf-8">
+	<title>文章添加--layui后台管理模板</title>
+	<meta name="renderer" content="webkit">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+	<meta name="apple-mobile-web-app-status-bar-style" content="black">
+	<meta name="apple-mobile-web-app-capable" content="yes">
+	<meta name="format-detection" content="telephone=no">
+	{block name="include"}
+	{include file="/public/head" /}
+	{/block}
+</head>
+<body class="childrenBody">
+<fieldset class="layui-elem-field">
+	<legend>导航详情</legend>
+	<form class="layui-form" id="form">
 		<div class="layui-form-item">
-			<label class="layui-form-label">导航名称</label>
+			{volist name='$view_plug' id='vo'}
+			{:widget("admin/Webplug/".$vo['plug'],$vo['config'])}
+			{/volist}
 			<div class="layui-input-block">
-				<input type="text" name="" placeholder="请输入" autocomplete="off" class="layui-input">
+				<button class="layui-btn" lay-submit lay-filter="*">立即提交</button>
+				<button type="reset" class="layui-btn layui-btn-primary">重置</button>
 			</div>
 		</div>
-		<div class="layui-form-item">
-			<label class="layui-form-label">复选框</label>
-			<div class="layui-input-block">
-				<input type="checkbox" name="like[write]" title="写作">
-				<input type="checkbox" name="like[read]" title="阅读" checked>
-				<input type="checkbox" name="like[dai]" title="发呆">
-			</div>
-		</div>
-		<div class="layui-form-item">
-			<label class="layui-form-label">开关</label>
-			<div class="layui-input-block">
-				<input type="checkbox" name="switch" lay-skin="switch">
-			</div>
-		</div>
-		<div class="layui-form-item">
-			<label class="layui-form-label">单选框</label>
-			<div class="layui-input-block">
-				<input type="radio" name="sex" value="男" title="男">
-				<input type="radio" name="sex" value="女" title="女" checked>
-			</div>
-		</div>
-		<div class="layui-form-item layui-form-text">
-			<label class="layui-form-label">文本域</label>
-			<div class="layui-input-block">
-				<textarea name="desc" placeholder="请输入内容" class="layui-textarea"></textarea>
-			</div>
-		</div>
-		<button lay-filter="edit" lay-submit style="display: none;"></button>
 	</form>
-</div>
+	</fieldset>
+</body>
 <script>
-	//自定义验证规则
-
+	var submit_url = "{$submit_url}";
 </script>
+</html>
