--- a/app/admin/view/public/head.html
+++ b/app/admin/view/public/head.html
@@ -1,68 +1,5 @@
-<!--login-->
-<!DOCTYPE html>
-<html >
-<head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Free Bootstrap Admin Template : Binary Admin</title>
-    <!-- BOOTSTRAP STYLES-->
-    <link href="{$Think.__ADMIN_STYLE__}/assets/css/bootstrap.css" rel="stylesheet" />
-    <!-- FONTAWESOME STYLES-->
-    <link href="{$Think.__ADMIN_STYLE__}/assets/css/font-awesome.css" rel="stylesheet" />
-    <!-- CUSTOM STYLES-->
-    <link href="{$Think.__ADMIN_STYLE__}/assets/css/custom.css" rel="stylesheet" />
-    <link href="{$Think.__ADMIN_STYLE__}/assets/css/style.css" rel="stylesheet" />
-    <!-- GOOGLE FONTS-->
-    <link href='http://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css' />
-    <link href="{$Think.__ADMIN_STYLE__}/assets/js/dataTables/dataTables.bootstrap.css" rel="stylesheet" />
-    <link href="{$Think.__ADMIN_STYLE__}/assets/js/morris/morris-0.4.3.min.css" rel="stylesheet" />
-    <!-- SCRIPTS -AT THE BOTOM TO REDUCE THE LOAD TIME-->
-    <!-- JQUERY SCRIPTS -->
-    <script src="{$Think.__ADMIN_STYLE__}/assets/js/jquery-1.10.2.js"></script>
-    <!-- BOOTSTRAP SCRIPTS -->
-    <script src="{$Think.__ADMIN_STYLE__}/assets/js/bootstrap.min.js"></script>
-    <!-- METISMENU SCRIPTS -->
-    <script src="{$Think.__ADMIN_STYLE__}/assets/js/jquery.metisMenu.js"></script>
-    <script src="{$Think.__ADMIN_STYLE__}/assets/js/Validform_v5.3.2_min.js"></script>
-    <!-- CUSTOM SCRIPTS -->
-    <script src="{$Think.__ADMIN_STYLE__}/assets/js/custom.js"></script>
-    <script src="{$Think.__ADMIN_LAYER__}/layer.js"></script>
-    <script src="{$Think.__ADMIN_LAYER__}/skin/default/layer.css"></script>
-</head>
-<!--index-->
+<link rel="stylesheet" href="{$Think.__ADMIN_LAYER__}/layui/css/layui.css" media="all" />
+<script type="text/javascript" src="{$Think.__ADMIN_LAYER__}/layui/layui.js"></script>
+<script type="text/javascript" src="{$Think.__ADMIN_LAYER__}/js/public.js"></script>
+<script type="text/javascript" src="{$Think.__ADMIN_LAYER__}/js/jq1.9.js"></script>
 
-
-    <!-- MORRIS CHART STYLES-->
-
-
-
-<!--blank-->
-
-
-
-
-<!--chart-->
-
-<!--form-->
-
-
-    <!-- BOOTSTRAP STYLES-->
-
-
-<!--registeration-->
-    <!-- BOOTSTRAP STYLES-->
-
-
-
-<!--tab-panel-->
-
-
-
-<!--TABLE-->
-
-    <!-- CUSTOM STYLES-->
-
-    <!-- TABLE STYLES-->
-
-
-<!--ui-->
