--- a/app/admin/view/nav/navlist.html
+++ b/app/admin/view/nav/navlist.html
@@ -88,7 +88,7 @@
 <br>
 <!-- 注意：如果你直接复制所有代码到本地，上述js路径需要改成你本地的 -->
 <script>
-  var add_url = "{:Url('info')}"
+  var add_url = "{:Url('add')}"
 layui.use(['element', 'layer'], function(){
   var element = layui.element();
   var layer = layui.layer;
