--- a/app/admin/view/public/head.html
+++ b/app/admin/view/public/head.html
@@ -2,4 +2,6 @@
 <script type="text/javascript" src="{$Think.__ADMIN_LAYER__}/layui/layui.js"></script>
 <script type="text/javascript" src="{$Think.__ADMIN_LAYER__}/js/public.js"></script>
 <script type="text/javascript" src="{$Think.__ADMIN_LAYER__}/js/jq1.9.js"></script>
+<script type="text/javascript" src="{$Think.__ADMIN_LAYER__}/js/List.js"></script>
+<link rel="stylesheet" href="{$Think.__ADMIN_LAYER__}/css/List.css" media="all" />
 
