--- a/app/admin/view/user/index.html
+++ b/app/admin/view/user/index.html
@@ -1,216 +1,103 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html>
+<head>
+  <meta charset="utf-8">
+  <title>layui</title>
+  <meta name="renderer" content="webkit">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+  <!-- 注意：如果你直接复制所有代码到本地，上述css路径需要改成你本地的 -->
+  {block name="include"}
+  {include file="/public/head" /}
+  {/block}
+</head>
+<body>
 
-	<head>
-		<meta charset="UTF-8">
-		<title>Table</title>
-		<link rel="stylesheet" href="{$Think.__ADMIN_LAYER__}/plugins/layui/css/layui.css" media="all" />
-		<link rel="stylesheet" href="{$Think.__ADMIN_LAYER__}/css/global.css" media="all">
-		<link rel="stylesheet" href="{$Think.__ADMIN_LAYER__}/plugins/font-awesome/css/font-awesome.min.css">
-		<link rel="stylesheet" href="{$Think.__ADMIN_LAYER__}/css/table.css" />
-	</head>
+<fieldset class="layui-elem-field layui-field-title" style="margin-top: 50px;">
+    <legend >面板嵌套</legend>
+</fieldset>
+<div class="" style="margin:10px 0 18px 90%;">
+  <button class="layui-btn Add_btn"><i class="layui-icon"></i> 添加导航</button>
+</div>
+<div class="layui-collapse" >
+  <div class="layui-colla-item">
+    <button class="layui-colla-title" style="border:0px; width: 85%;  text-align: left;">文豪</button>
+    <button class="layui-btn layui-btn-primary layui-btn-small" ><i class="layui-icon"></i></button>
+    <button class="layui-btn layui-btn-primary layui-btn-small"><i class="layui-icon"></i></button>
+    <button class=" layui-btn  layui-btn-primary layui-btn-small">隐藏</button>
+    <button class=" layui-btn  layui-btn-primary layui-btn-small">禁用</button>
+      <div class="layui-colla-content">
 
-	<body>
-		<div class="admin-main">
+      <div class="layui-collapse" >
+        <div class="layui-colla-item">
+          <h2 class="layui-colla-title">唐代</h2>
+          <div class="layui-colla-content ">
 
-			<blockquote class="layui-elem-quote">
-				<a href="javascript:;" class="layui-btn layui-btn-small" id="add" data-url="/admin/nav/index.html">
-					<i class="layui-icon">&#xe608;</i> 添加信息
-				</a>
-				<a href="javascript:;" class="layui-btn layui-btn-small" id="">
-					<i class="layui-icon">&#xe608;</i> 删除
-				</a>
+            <div class="layui-collapse" >
+              <div class="layui-colla-item">
+                <h2 class="layui-colla-title">杜甫</h2>
+                <div class="layui-colla-content ">
+                  伟大的诗人
+                </div>
+              </div>
+              <div class="layui-colla-item">
+                <h2 class="layui-colla-title">李白</h2>
+                <div class="layui-colla-content">
+                  <p>据说是韩国人</p>
+                </div>
+              </div>
+              <div class="layui-colla-item">
+                <h2 class="layui-colla-title">王勃</h2>
+                <div class="layui-colla-content">
+                  <p>千古绝唱《滕王阁序》</p>
+                </div>
+              </div>
+            </div>
 
-				<a href="javascript:;" class="layui-btn layui-btn-small" id="search">
-					<i class="layui-icon">&#xe615;</i> 搜索
-				</a>
-			</blockquote>
-			<fieldset class="layui-elem-field">
-				<legend>数据列表</legend>
-				<div class="layui-field-box layui-form">
-					<table class="layui-table admin-table">
-						<thead>
-							<tr>
-								<th style="width: 30px;"><input type="checkbox" lay-filter="allselector" lay-skin="primary"></th>
-								<th>姓名</th>
-								<th>年龄</th>
-								<th>创建时间</th>
-								<th>操作</th>
-							</tr>
-						</thead>
-						<tbody id="content">
-						</tbody>
-					</table>
-				</div>
-			</fieldset>
-			<div class="admin-table-page">
-				<div id="paged" class="page">
-				</div>
-			</div>
-		</div>
-		<!--模板-->
-		<script type="text/html" id="tpl">
-			{{# layui.each(d.list, function(index, item){ }}
-			<tr>
-				<td><input type="checkbox" lay-skin="primary"></td>
-				<td>{{ item.name }}</td>
-				<td>{{ item.age }}</td>
-				<td>{{ item.createtime }}</td>
-				<td>
-					<a href="/detail-1" target="_blank" class="layui-btn layui-btn-normal layui-btn-mini">预览</a>
-					<a href="javascript:;" data-name="{{ item.name }}" data-opt="edit" class="layui-btn layui-btn-mini">编辑</a>
-					<a href="javascript:;" data-id="1" data-opt="del" class="layui-btn layui-btn-danger layui-btn-mini">删除</a>
-				</td>
-			</tr>
-			{{# }); }}
-		</script>
-		<script type="text/javascript" src="{$Think.__ADMIN_LAYER__}/plugins/layui/layui.js"></script>
-		<script>
-			layui.config({
-				base: '/static/layer/js/'
-			});
+          </div>
+        </div>
+        <div class="layui-colla-item">
+          <h2 class="layui-colla-title">宋代</h2>
+          <div class="layui-colla-content">
+            <p>比如苏轼、李清照</p>
+          </div>
+        </div>
+        <div class="layui-colla-item">
+          <h2 class="layui-colla-title">当代</h2>
+          <div class="layui-colla-content">
+            <p>比如贤心</p>
+          </div>
+        </div>
+      </div>
+    </div>
+    </div>
+  <div class="layui-colla-item">
+    <h2 class="layui-colla-title">科学家</h2>
+    <div class="layui-colla-content">
+      <p>伟大的科学家</p>
+    </div>
+  </div>
+  <div class="layui-colla-item">
+    <h2 class="layui-colla-title">艺术家</h2>
+    <div class="layui-colla-content">
+      <p>浑身散发着艺术细胞</p>
+    </div>
+  </div>
+</div>
 
-			layui.use(['paging', 'form'], function() {
-				var $ = layui.jquery,
-					paging = layui.paging(),
-					layerTips = parent.layer === undefined ? layui.layer : parent.layer, //获取父窗口的layer对象
-					layer = layui.layer, //获取当前窗口的layer对象
-					form = layui.form();
+<br>
+<!-- 注意：如果你直接复制所有代码到本地，上述js路径需要改成你本地的 -->
+<script>
+  var add_url = "{:Url('info')}"
+layui.use(['element', 'layer'], function(){
+  var element = layui.element();
+  var layer = layui.layer;
+  //监听折叠
+  element.on('collapse(test)', function(data){
+    layer.msg('展开状态：'+ data.show);
+  });
+});
+</script>
 
-                paging.init({
-                    openWait: true,
-                    url: '/static/layer/datas/laytpl_laypage_data.json?v=' + new Date().getTime(), //地址
-					elem: '#content', //内容容器
-					params: { //发送到服务端的参数
-					},
-					type: 'GET',
-					tempElem: '#tpl', //模块容器
-					pageConfig: { //分页参数配置
-						elem: '#paged', //分页容器
-						pageSize: 3 //分页大小
-					},
-					success: function() { //渲染成功的回调
-						//alert('渲染成功');
-					},
-					fail: function(msg) { //获取数据失败的回调
-						//alert('获取数据失败')
-					},
-					complate: function() { //完成的回调
-						//alert('处理完成');
-						//重新渲染复选框
-						form.render('checkbox');
-						form.on('checkbox(allselector)', function(data) {
-							var elem = data.elem;
-
-							$('#content').children('tr').each(function() {
-								var $that = $(this);
-								//全选或反选
-								$that.children('td').eq(0).children('input[type=checkbox]')[0].checked = elem.checked;
-								form.render('checkbox');
-							});
-						});
-
-						//绑定所有编辑按钮事件						
-						$('#content').children('tr').each(function() {
-							var $that = $(this);
-							$that.children('td:last-child').children('a[data-opt=edit]').on('click', function() {
-								layer.msg($(this).data('name'));
-							});
-
-						});
-
-					},
-				});
-				//获取所有选择的列
-				$('#getSelected').on('click', function() {
-					var names = '';
-					$('#content').children('tr').each(function() {
-						var $that = $(this);
-						var $cbx = $that.children('td').eq(0).children('input[type=checkbox]')[0].checked;
-						if($cbx) {
-							var n = $that.children('td:last-child').children('a[data-opt=edit]').data('name');
-							names += n + ',';
-						}
-					});
-					layer.msg('你选择的名称有：' + names);
-				});
-
-				$('#search').on('click', function() {
-					parent.layer.alert('你点击了搜索按钮')
-				});
-
-				var addBoxIndex = -1;
-//				$('#add').on('click', function() {
-//					if(addBoxIndex !== -1)
-//						return;
-//					//本表单通过ajax加载 --以模板的形式，当然你也可以直接写在页面上读取
-//					$.get('temp/edit-form.html', null, function(form) {
-//						addBoxIndex = layer.open({
-//							type: 1,
-//							title: '添加表单',
-//							content: form,
-//							btn: ['保存', '取消'],
-//							shade: false,
-//							offset: ['100px', '30%'],
-//							area: ['600px', '400px'],
-//							zIndex: 19950924,
-//							maxmin: true,
-//							yes: function(index) {
-//								//触发表单的提交事件
-//								$('form.layui-form').find('button[lay-filter=edit]').click();
-//							},
-//							full: function(elem) {
-//								var win = window.top === window.self ? window : parent.window;
-//								$(win).on('resize', function() {
-//									var $this = $(this);
-//									elem.width($this.width()).height($this.height()).css({
-//										top: 0,
-//										left: 0
-//									});
-//									elem.children('div.layui-layer-content').height($this.height() - 95);
-//								});
-//							},
-//							success: function(layero, index) {
-//								//弹出窗口成功后渲染表单
-//								var form = layui.form();
-//								form.render();
-//								form.on('submit(edit)', function(data) {
-//									console.log(data.elem) //被执行事件的元素DOM对象，一般为button对象
-//									console.log(data.form) //被执行提交的form对象，一般在存在form标签时才会返回
-//									console.log(data.field) //当前容器的全部表单字段，名值对形式：{name: value}
-//									//调用父窗口的layer对象
-//									layerTips.open({
-//										title: '这里面是表单的信息',
-//										type: 1,
-//										content: JSON.stringify(data.field),
-//										area: ['500px', '300px'],
-//										btn: ['关闭并刷新', '关闭'],
-//										yes: function(index, layero) {
-//											layerTips.msg('你点击了关闭并刷新');
-//											layerTips.close(index);
-//											location.reload(); //刷新
-//										}
-//
-//									});
-//									//这里可以写ajax方法提交表单
-//									return false; //阻止表单跳转。如果需要表单跳转，去掉这段即可。
-//								});
-//								//console.log(layero, index);
-//							},
-//							end: function() {
-//								addBoxIndex = -1;
-//							}
-//						});
-//					});
-//				});
-
-				$('#import').on('click', function() {
-					var that = this;
-					var index = layer.tips('只想提示地精准些', that, { tips: [1, 'white'] });
-					$('#layui-layer' + index).children('div.layui-layer-content').css('color', '#000000');
-				});
-			});
-		</script>
-	</body>
-
+</body>
 </html>
