--- a/app/admin/view/widget/listtable.html
+++ b/app/admin/view/widget/listtable.html
@@ -1,28 +1,20 @@
 <div class="layui-form news_list">
     <table class="layui-table">
-<!--        <colgroup>
-            <col width="50">
+      <!--  <colgroup>
             <col>
-            <col width="9%">
-            <col width="9%">
-            <col width="9%">
-            <col width="9%">
-            <col width="9%">
-            <col width="15%">
         </colgroup>-->
         <thead>
-            <tr>
-                <th style="width: 3%;"><input type="checkbox" name="" lay-skin="primary" lay-filter="allChoose" id="allChoose"></th>
-                <th style="text-align:left;">文章标题</th>
-                <th>发布人</th>
-                <th>审核状态</th>
-                <th>浏览权限</th>
-                <th>是否展示</th>
-                <th>发布时间</th>
-                <th>操作</th>
-            </tr>
+        <tr>
+            <th>
+                <input type="checkbox" name="" lay-skin="primary" lay-filter="allChoose" id="allChoose">
+            </th>
+            {volist name="$data" id ='vo'}
+            <th class="{$vo.class}" style="{$vo.style}" >{$vo.name}</th>
+            {/volist}
+        </tr>
         </thead>
         <tbody class="news_content"></tbody>
     </table>
 </div>
-<div id="page"></div>
+<div id="page">
+</div>
