--- a/app/admin/view/public/info.html
+++ b/app/admin/view/public/info.html
@@ -33,5 +33,7 @@
 </body>
 <script>
     var submit_url = "{$request_url.submit_url}";
+    var upload_file = "{$request_url.upload_file?$request_url.upload_file:''}"
+    var verify_image = "{$request_url.verify_image?$request_url.verify_image:''}"
 </script>
 </html>
