--- a/app/admin/view/nav/navlist.html
+++ b/app/admin/view/nav/navlist.html
@@ -90,7 +90,7 @@
 <script>
   var add_url = "{:Url('add')}"
 layui.use(['element', 'layer'], function(){
-  var element = layui.element();
+  var element = layui.element;
   var layer = layui.layer;
   //监听折叠
   element.on('collapse(test)', function(data){
