--- a/app/admin/view/public/head.html
+++ b/app/admin/view/public/head.html
@@ -1,4 +1,5 @@
 <link rel="stylesheet" href="{$Think.__ADMIN_LAYER__}/layui/css/layui.css" media="all" />
 <script type="text/javascript" src="{$Think.__ADMIN_LAYER__}/layui/layui.js"></script>
 <script type="text/javascript" src="{$Think.__ADMIN_LAYER__}/js/jq1.9.js"></script>
+<script type="text/javascript" src="{$Think.__ADMIN_LAYER__}/js/info.js"></script>
 
