--- a/app/admin/view/public/info.html
+++ b/app/admin/view/public/info.html
@@ -12,13 +12,12 @@
     {block name="include"}
     {include file="/public/head" /}
     {/block}
-    <script type="text/javascript" src="{$Think.__ADMIN_LAYER__}/js/info.js"></script>
     <script type="text/javascript" src="{$Think.__ADMIN_LAYER__}/js/spark-md5.min.js"></script>
 </head>
 <body class="childrenBody">
 <fieldset class="layui-elem-field">
-    <legend>导航详情</legend>
-    <form class="layui-form" id="form">
+    <legend>{$menu_name.menu_name}</legend>
+    <form class="layui-form" id="form" method="post">
         <div class="layui-form-item">
             {volist name='$config' id='vo'}
             {:widget("admin/Webplug/webplug",$vo['config'])}
