--- a/app/admin/view/public/table_list_cp.html
+++ b/app/admin/view/public/table_list_cp.html
@@ -18,15 +18,14 @@
                 {:widget("admin/Webplug/table_list",  json_encode($news_array ))}
             {/volist}
             <td>
-                <a class="layui-btn layui-btn-mini Add_btn" href="javascript:;" data-id ="{$vo.id}" onclick="test(this)">
-                    <i class="iconfont icon-edit"></i>编辑
-                </a>
-                <!--    <a class="layui-btn layui-btn-normal layui-btn-mini news_collect">
-                        <i class="layui-icon"></i> 收藏
-                    </a>
-                    <a class="layui-btn layui-btn-danger layui-btn-mini news_del" data-id="1">
-                        <i class="layui-icon"></i> 删除
-                    </a>-->
+                <?php
+                    if(!empty($Button_arr)){
+                       $Button_arr = json_encode($Button_arr);
+                ?>
+                {:widget("admin/Webplug/Button",$Button_arr)}
+                <?php
+                    }
+                ?>
             </td>
         </tr>
     {/volist}
