--- a/app/admin/view/public/table_list_cp.html
+++ b/app/admin/view/public/table_list_cp.html
@@ -20,6 +20,7 @@
             <td>
                 <?php
                     if(!empty($Button_arr)){
+                       $Button_arr['id'] =$vo['id'];
                        $Button_arr = json_encode($Button_arr);
                 ?>
                 {:widget("admin/Webplug/Button",$Button_arr)}
@@ -35,30 +36,30 @@
 ?>
 
 <script>
-        layui.config({
-            base : "/static/layer/js/"
-        })
-            //添加
-            function test (obj) {
-                var id = $(obj).attr('data-id');
-                var url = "{$request_url['edit']}"+id
-                var index = layui.layer.open({
-                    title: "添加文章",
-                    type: 2,
-                    content: url,
-                    id:12,
-                    success: function (layero, index) {
-                        setTimeout(function () {
-                            layui.layer.tips('点击此处返回文章列表', '.layui-layer-setwin .layui-layer-close', {
-                                tips: 3
-                            });
-                        }, 500)
-                    }
-                })
-                //改变窗口大小时，重置弹窗的高度，防止超出可视区域（如F12调出debug的操作）
-                $(window).resize(function () {
-                    layui.layer.full(index);
-                })
-                layui.layer.full(index);
-            }
+//        layui.config({
+//            base : "/static/layer/js/"
+//        })
+//            //添加
+//            function test (obj) {
+//                var id = $(obj).attr('data-id');
+//                var url = "{$request_url['edit']}"+id
+//                var index = layui.layer.open({
+//                    title: "添加文章",
+//                    type: 2,
+//                    content: url,
+//                    id:12,
+//                    success: function (layero, index) {
+//                        setTimeout(function () {
+//                            layui.layer.tips('点击此处返回文章列表', '.layui-layer-setwin .layui-layer-close', {
+//                                tips: 3
+//                            });
+//                        }, 500)
+//                    }
+//                })
+//                //改变窗口大小时，重置弹窗的高度，防止超出可视区域（如F12调出debug的操作）
+//                $(window).resize(function () {
+//                    layui.layer.full(index);
+//                })
+//                layui.layer.full(index);
+//            }
 </script>
