--- a/app/admin/view/public/table_list_cp.html
+++ b/app/admin/view/public/table_list_cp.html
@@ -34,6 +34,9 @@
         </tr>
     {/volist}
 <input id="total_page" value="{$config.total_page}" type="hidden">
+<div id="pages">
+
+</div>
 <?php
     }
 ?>
