--- a/app/admin/view/widget/uploadXml.html
+++ b/app/admin/view/widget/uploadXml.html
@@ -21,7 +21,7 @@
 {include file="/public/webuploader" /}
 {/block}
 <script type="text/javascript" src="{$Think.__ADMIN_LAYER__}/js/Web_Uploader_File.js"></script>
-<div id="uploader" class="wu-example">
+<div id="uploader" class="wu-example" style="padding:15px 0px 0px 30px ">
     <!--用来存放文件信息-->
     <div id="thelist" class="uploader-list"></div>
     <div class="btns">
