进销存版本管理

--- a/app/admin/view/index/index.html
+++ b/app/admin/view/index/index.html
@@ -12,7 +12,6 @@
 	<meta name="format-detection" content="telephone=no">
 	<link rel="icon" href="favicon.ico">
 	<link rel="stylesheet" href="{$Think.__ADMIN_LAYER__}/layui/css/layui.css" media="all" />
-	<link rel="stylesheet" href="//at.alicdn.com/t/font_tnyc012u2rlwstt9.css" media="all" />
 	<link rel="stylesheet" href="{$Think.__ADMIN_LAYER__}/css/main.css" media="all" />
 </head>
 <body class="main_body">
@@ -112,20 +111,18 @@
 	</div>
 	<input type="checkbox" name="yyy" lay-skin="switch" lay-text="ON|OFF" checked>
 	<!-- 底部 -->
-	<div class="layui-footer footer">
+	<!--<div class="layui-footer footer">
 		<p>copyright @2017 请叫我马哥　　<a onclick="donation()" class="layui-btn layui-btn-danger l·ayui-btn-small">捐赠作者</a></p>
-	</div>
+	</div>-->
 </div>
-
+</body>
 <script>
 	var leftnav_url = "{:Url('admin/Nav/leftnav')}"
 </script>
 <!-- 移动导航 -->
 <div class="site-tree-mobile layui-hide"><i class="layui-icon">&#xe602;</i></div>
 <div class="site-mobile-shade"></div>
-
 <script type="text/javascript" src="{$Think.__ADMIN_LAYER__}/layui/layui.js"></script>
 <script type="text/javascript" src="{$Think.__ADMIN_LAYER__}/js/index.js"></script>
 <script type="text/javascript" src="{$Think.__ADMIN_LAYER__}/js/leftNav.js"></script>
-</body>
 </html>
